# ieap_automation_platform

./: .gitignore  README.md
backend/: .env.example  .gitignore  .pre-commit-config.yaml  .yamllint.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  alembic_errors.txt  app_production.py  demo_platform.py  docker-compose.prod.yml  docker-compose.yml  ieap_main.py  pyproject.toml  pytest.ini  requirements.txt
backend/.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
backend/.github/workflows/: cd.yml  ci.yml
backend/admin/: __init__.py  analytics.py  dashboard.py  operations.py  router.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py
backend/api/: __init__.py  dependencies.py  main.py  middleware.py  routes.py
backend/api/graphql/: __init__.py  router.py  schema.py
backend/api/schemas/: analytics.py  auth.py  decisions.py  health.py  models.py  pipelines.py  predictions.py  tasks.py  webhooks.py
backend/api/v1/: __init__.py  analytics.py  auth.py  decisions.py  health.py  models.py  pipelines.py  predictions.py  tasks.py  webhooks.py
backend/api/websocket/: __init__.py  manager.py  router.py
backend/batch/: __init__.py  processor.py  workers.py
backend/cache/: __init__.py  cache_decorator.py  celery_app.py  redis_client.py  tasks.py
backend/cli/: __init__.py  main.py
backend/config/: __init__.py  feature_flags.py  settings.py
backend/data_pipeline/: realtime_pipeline.py
backend/database/: __init__.py  connection.py  models.py  repositories.py
backend/decision_engine/: __init__.py  autonomous_engine.py
backend/deploy/grafana/provisioning/datasources/: datasources.yml
backend/deploy/prometheus/: prometheus.yml
backend/docs/: PRODUCTION_FEATURES.md
backend/events/: __init__.py  bus.py  decorators.py
backend/examples/: README.md
backend/examples/1_ml_model_deployment/: README.md  requirements.txt  train_model.py
backend/examples/1_ml_model_deployment/api/: app.py
backend/examples/1_ml_model_deployment/data/: sample_data.csv
backend/examples/1_ml_model_deployment/models/: churn_model.pkl  metrics.json
backend/examples/2_automation_pipeline/: README.md  main.py  requirements.txt
backend/examples/2_automation_pipeline/reports/outputs/: financial_data_metrics_20251030_132144.json  financial_data_processed_20251030_131113.csv  summary_report_20251030_131113.txt  summary_report_20251030_131935.txt  summary_report_20251030_132144.txt
backend/examples/3_nlp_ai_integration/: README.md  main.py  requirements.txt
backend/examples/3_nlp_ai_integration/outputs/: analysis_20251030_131149.json  analysis_20251030_132029.json  analysis_20251030_132211.json
backend/examples/4_analytics_dashboard/: README.md  requirements.txt
backend/examples/4_analytics_dashboard/dashboard/: app.py
backend/explainability/: __init__.py  explainer.py  lime_explainer.py  shap_explainer.py  visualization.py
backend/health/: __init__.py  aggregator.py  checks.py  recovery.py  router.py
backend/k8s/base/: configmap.yaml  deployment-api.yaml  deployment-worker.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pdb.yaml  rbac.yaml  service.yaml
backend/ml_models/: __init__.py  advanced_models.py
backend/monitoring/: __init__.py  health.py  logging.py  metrics.py  tracing.py
backend/orchestrator/: __init__.py  core.py
backend/plugins/: __init__.py  base.py  example_plugin.py  hooks.py  loader.py  manager.py  registry.py
backend/ratelimit/: __init__.py  decorators.py  limiter.py  middleware.py  strategies.py
backend/resilience/: __init__.py  bulkhead.py  circuit_breaker.py  fallback.py  retry.py  timeout.py
backend/scripts/: entrypoint.sh  generate_secrets.py  health_check.py  init-db.sql  init_data.py  setup_dev.sh
backend/sdk/: __init__.py  client.py  exceptions.py  models.py
backend/security/: __init__.py  audit.py  authentication.py  authorization.py  encryption.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py  test_database.py
backend/tests/unit/: test_config.py  test_security.py
frontend/: eslint.config.mjs  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/auth/callback/: page.tsx
frontend/src/app/auth/google-callback/: page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/admin/: page.tsx
frontend/src/app/dashboard/analytics/: page.tsx
frontend/src/app/dashboard/decisions/: page.tsx
frontend/src/app/dashboard/health/: page.tsx
frontend/src/app/dashboard/models/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/layout/: header.tsx  page-header.tsx  sidebar.tsx
frontend/src/components/providers/: auth-provider.tsx  index.tsx
frontend/src/components/realtime/: alerts-panel.tsx  health-monitor.tsx  metrics-monitor.tsx  predictions-stream.tsx
frontend/src/components/ui/: form.tsx  index.ts  resizable.tsx  sidebar.tsx  tag-input.tsx
frontend/src/hooks/: index.ts  use-mobile.tsx  use-toast.ts  use-websocket.ts
frontend/src/hooks/api/: use-analytics.ts  use-api-keys.ts  use-auth.ts  use-decisions.ts  use-health.ts  use-models.ts  use-pipelines.ts  use-predictions.ts  use-realtime.ts  use-tasks.ts  use-webhooks.ts
frontend/src/lib/: utils.ts
frontend/src/lib/api/: admin.ts  analytics.ts  auth.ts  client.ts  decisions.ts  health.ts  index.ts  models.ts  pipelines.ts  predictions.ts  tasks.ts  webhooks.ts
frontend/src/lib/stores/: auth-store.ts
frontend/src/types/: api.ts
(+8 files in other folders)
